feat: add `billing.getPriceSystem`
